--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,22 +12,7 @@
 </nav>
 
 <main>
-  <table class="table container">
-    <thead>
-    <tr>
-      <th scope="col">Date</th>
-      <th scope="col">Weight</th>
-      <th scope="col">Body Fat %</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let entry of entrySvc.sortedEntries">
-      <td>{{entry.date | date:'yyyy/MM/dd'}} </td>
-      <td>{{entry.weight}} lbs</td>
-      <td >{{entry.bodyfat | percent}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <router-outlet></router-outlet>
 </main>
 
 
