--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,13 @@
         <i class="fas fa-weight"></i>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Home</a>
+        <a class="nav-link" [routerLink]="['/home']">Home</a>
+      </li>
+      <li *ngIf="!identitySvc.loggedIn" class="nav-item">
+        <a class="nav-link" [routerLink]="['/login']">Login</a>
+      </li>
+      <li *ngIf="identitySvc.loggedIn" class="nav-item">
+        <a class="nav-link" [routerLink]="['/login']">Logout</a>
       </li>
     </ul>
   </div>
