--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="nav">
     <ul class="navbar-nav mr-auto">
       <li class="navbar-brand">
-        <i class="fas fa-weight"></i>
+        <span><i class="fas fa-weight"></i></span>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/home']">Home</a>
